hphp/hack/test/typecheck/reified_generics/enforceable_type_consts.php.exp
File "enforceable_type_consts.php", line 14, characters 7-7:
Class E does not correctly implement all required members  (Typing[4302])
  File "enforceable_type_consts.php", line 14, characters 17-19:
  Some members are incompatible with those declared in type Top
Read the following to see why:
  File "enforceable_type_consts.php", line 15, characters 24-41:
  Invalid type
  File "enforceable_type_consts.php", line 10, characters 5-17:
  Type constant TVassil was declared __Enforceable here
  File "enforceable_type_consts.php", line 15, characters 24-41:
  This type is not enforceable because it has a type with an erased generic type argument
